--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,11 @@
-<?xml version="1.0" encoding="utf-8"?>
+<!--?xml version="1.0" encoding="UTF-8"?-->
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+  <color name="primaryColor">#bbdefb</color>
+  <color name="primaryLightColor">#eeffff</color>
+  <color name="primaryDarkColor">#8aacc8</color>
+  <color name="secondaryColor">#b3e5fc</color>
+  <color name="secondaryLightColor">#e6ffff</color>
+  <color name="secondaryDarkColor">#82b3c9</color>
+  <color name="primaryTextColor">#3e2723</color>
+  <color name="secondaryTextColor">#000000</color>
 </resources>
