--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/listFragment"
-        android:name="codes.malukimuthusi.newsdemoapp.ListView.ListFragment"
+        android:name="codes.malukimuthusi.newsdemoapp.viewList.ListFragment"
         android:label="list_fragment"
         tools:layout="@layout/list_fragment" />
 </navigation>
