--- a/app/src/main/res/layout/list_fragment.xml
+++ b/app/src/main/res/layout/list_fragment.xml
@@ -4,6 +4,10 @@
 
     <data>
 
+        <variable
+            name="viewModel"
+            type="codes.malukimuthusi.newsdemoapp.viewList.ListViewModel" />
+
     </data>
 
     <FrameLayout
