--- a/app/src/main/res/layout/single_item.xml
+++ b/app/src/main/res/layout/single_item.xml
@@ -17,12 +17,12 @@
 
     <FrameLayout
         android:id="@+id/rootSingleItem"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/materialCard"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="2dp"
             app:cardBackgroundColor="?attr/colorPrimaryDark"
@@ -41,15 +41,20 @@
                     android:layout_width="match_parent"
                     android:layout_height="180dp"
                     android:contentDescription="@string/image_description"
+                    app:imageUrl="@{article.urlToImage}"
                     app:srcCompat="@drawable/flat_multitasking" />
 
+
                 <TextView
+                    android:id="@+id/articleTitleText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:padding="2dp"
-                    android:text="@{article.title}" />
+                    android:text="@{article.title}"
+                    android:visibility="visible" />
 
                 <TextView
+                    android:id="@+id/articleDescriptionText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:padding="2dp"
