Used Paging Library Correctly.
After going through the documentation, discovered a couple of things.

DataSource.Factory.map(){lambda}
Gave me a challenge, I was calling it DataSource.Factory{lambda} without the brackets. I don't why it has to be called with the brackets.

--- a/app/src/main/res/layout/single_item.xml
+++ b/app/src/main/res/layout/single_item.xml
@@ -11,7 +11,7 @@
 
         <variable
             name="article"
-            type="codes.malukimuthusi.newsdemoapp.database.ArticleDB" />
+            type="codes.malukimuthusi.newsdemoapp.dataDomain.Article" />
 
     </data>
 
