--- a/app/src/main/res/menu/top_app_bar.xml
+++ b/app/src/main/res/menu/top_app_bar.xml
@@ -3,16 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/favorite"
-        android:contentDescription="@string/favourite_icon_description"
-        android:icon="@drawable/ic_favorite_black_24dp"
-        android:title="@string/favorite" />
-
-    <item
         android:id="@+id/search"
         android:contentDescription="@string/search_icon_description"
         android:icon="@drawable/ic_search_black_24dp"
         android:title="@string/search"
+        app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/delete_all"
+        android:contentDescription="@string/favourite_icon_description"
+        android:icon="@drawable/ic_delete_black_24dp"
+        android:title="@string/delete_all"
         app:showAsAction="ifRoom" />
 
     <item
