--- a/app/src/main/res/menu/top_app_bar_menu.xml
+++ b/app/src/main/res/menu/top_app_bar_menu.xml
@@ -3,10 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/search"
+        android:id="@+id/refresh"
         android:contentDescription="@string/search_icon_description"
-        android:icon="@drawable/ic_search_black_24dp"
-        android:title="@string/search"
+        android:icon="@drawable/ic_refresh_black_24dp"
+        android:title="@string/refresh"
         app:showAsAction="ifRoom" />
 
 
